fix controls align

--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ nav .logo {
 /*  Controls  */
 .controls {
   display: flex;
-  align-items: end;
+  align-items: center;
   gap: .5rem;
   text-transform: uppercase;
 }
